[package]
name = "job-hopper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
futures = "0.3.15"
http = "0.2.4"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = "0.55.0"
kube-runtime = "0.55.0"
rand = "0.8.3"
serde = "1.0.126"
serde_json = "1.0.64"
stackdriver_logger = "0.8.0"
tokio = { version = "1.6.0", features = ["full"] }
warp = "0.3.1"
